# swc-plugin-auto-css-modules

./: .gitignore  Cargo.toml  README.md  index.d.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: ci.yml
example/: _do.ts  corejs.ts  index.ts  package.json
example/issues/: optional-chaining.ts
src/: lib.rs
transform/: Cargo.toml
transform/src/: lib.rs
transform/tests/: fixture.rs
transform/tests/fixture/auto-css-modules/: config.json  input.js  output.js
transform/tests/fixture/corejs/: config.json  input.js  output.js
