[package]
name = "swc_plugin_auto_css_modules"
version = "1.4.0"
edition = "2021"
authors = ["fz6m"]
description = "Auto css modules plugin for swc"
license = "MIT"
repository = "https://github.com/umijs/swc-plugin-auto-css-modules.git"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
serde_json = "1.0.99"
auto_css_modules = { version = "1.4.0", path = "./transform" }
swc_core = { version = "0.79.0", features = [
  "ecma_plugin_transform",
  "ecma_visit",
  "ecma_ast",
] }
